# ToyRenderer

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  Color.h  Global.h  Image.h  Mat3.h  Mat4.h  Model.h  Screen.h  Triangle.h  Vec2.h  Vec3.h  Vec4.h
models/source/: Aiz_v1.0_2.79.mtl
src/: Camera.cpp  Color.cpp  Global.cpp  Image.cpp  Mat3.cpp  Mat4.cpp  Model.cpp  Screen.cpp  Triangle.cpp  Vec2.cpp  Vec3.cpp  Vec4.cpp  main.cpp
x64/Debug/: toyRenderer.ilk  vc143.idb
